"""Verification token model used for email confirmation."""

from __future__ import annotations

import datetime as dt
import secrets
from uuid import UUID, uuid4

from sqlalchemy import DateTime, ForeignKey, String
from sqlalchemy.orm import Mapped, mapped_column

from app.db.base import Base


def utcnow() -> dt.datetime:
    return dt.datetime.now(dt.timezone.utc)


def generate_verification_code() -> str:
    return f"{secrets.randbelow(1_000_000):06d}"


class VerificationToken(Base):
    __tablename__ = "verification_tokens"

    token: Mapped[str] = mapped_column(String(64), primary_key=True, default=lambda: uuid4().hex)
    code: Mapped[str] = mapped_column(String(6), nullable=False, index=True, default=generate_verification_code)
    user_id: Mapped[UUID] = mapped_column(ForeignKey("users.id", ondelete="CASCADE"))
    created_at: Mapped[dt.datetime] = mapped_column(DateTime(timezone=True), default=utcnow)
    expires_at: Mapped[dt.datetime] = mapped_column(DateTime(timezone=True), nullable=False)
    used_at: Mapped[dt.datetime | None] = mapped_column(DateTime(timezone=True), nullable=True)
